addAlarmTime 구현